# casino-simulation

./: CMakeLists.txt  README.md
data/: crapsData.txt  rouletteData.txt
generators/: crapsDataCombiner.py  runner.sh
generators/old/: genCrapsData.sh
programs/: crapsField.py  crapsMulti.py  crapsPassLine.py
programs/cpp_version/: rouletteSim  rouletteSim.cc
programs/cpp_version/craps/: Datapool.h  Dice.cc  Dice.h  Game.cc  Game.h  Makefile  Player.cc  Player.h  crapsSim.cc  main.cc
programs/cpp_version/craps/old/: crapsSim
programs/cpp_version/craps/oop_version/: CMakeCache.txt  CMakeLists.txt  Datapool.cc  Datapool.h  Dice.cc  Dice.h  Game.cc  Game.h  Makefile  Makefile.old2  Player.cc  Player.h  cmake_install.cmake  main.cc
programs/cpp_version/roulette/: Makefile
programs/python_version/: crapsBets.py  crapsDontPassLine.py  crapsMulti.py  rouletteSim.py
